--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+
+body,
 html {
+    height: 100%;
     scroll-behavior: smooth;
 }
 body {
@@ -7,7 +10,24 @@ body {
     background-color: black;
     color: gold;
 }
+.sticky{
+    position: sticky;
+    top: 0;
+    /* overflow: hidden; */
+    background-color: black;
+}
+.bg {
 
+    background-image: url("/GI.png");
+
+
+    height: 100%;
+    width: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 header {
     display: flex;
     justify-content: space-between;
@@ -36,11 +56,14 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: gold;
-    font-weight: bold;
+    /* font-weight: bold; */
+    
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
+    
+    font-weight: bold;
+    
 }
 
 .hero {
@@ -108,3 +131,4 @@ footer {
     background: black;
     border-top: 2px solid gold;
 }
+
